@@ -1,3 +1,7 @@
+05/02/2024:
+	- Added JPEG2000 codec version information to logging.
+
+
 26/01/2024:
 	- Disable pass-through for TIFF-JPEGs where YCbCr sub-sampling has been defined with an RGB color space -
 	  these require the full JFIF format rather than the abreviated JPEG within the TIFF
